# trealla

./: .clang-format  .clangd  .editorconfig  .gdbinit  .gitignore  .gitmodules  ATTRIBUTION  CMakeLists.txt  CMakePresets.json  Justfile  LICENSE  Makefile  README.md  llm_context.md  logtalk.sh  test.pl  tools.md  tpl.c  wapm.toml
.archive/compat/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  fenv.h  float.h  inttypes.h  limits.h  locale.h  math.h  missing_headers.txt  netdb.h  signal.h  spawn.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h  wctype.h
.archive/compat/gnu/: stubs-32.h
.archive/compat/netinet/: in.h  tcp.h
.archive/compat/readline/: history.h  readline.h
.archive/compat/sys/: ioctl.h  mman.h  resource.h  socket.h  stat.h  time.h  un.h  wait.h
.archive/include/: stdbool.h  stddef.h  stdint.h
.github/workflows/: build.yaml  compliance.yml  lint.yml
.hooks/: pre-commit
boards/: PLACEHOLDER.txt
boards/dummy/: linker_script.ld
boards/generic/: CMakePresets.json  linker_script.ld  picolibc-cross.txt
boards/mps3-an524/: CMakePresets.json  picolibc-cross.txt  time.c
boards/teensy41/: CMakePresets.json  linker_script.ld
cmake/: CodegenLibraryPl.cmake  Dependencies.cmake  Formatting.cmake  Hooks.cmake  Linting.cmake  Options.cmake  Picolibc.cmake  Testing.cmake  Version.cmake
cmake/presets/: base.json
cmake/toolchains/: arm-none-eabi-nolibc.cmake  arm-none-eabi-picolibc.cmake  arm-none-eabi.cmake
compat/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  fenv.h  float.h  inttypes.h  limits.h  locale.h  math.h  missing_headers.txt  netdb.h  signal.h  spawn.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  termios.h  time.h  unistd.h  wctype.h
compat/gnu/: stubs-32.h
compat/netinet/: in.h  tcp.h
compat/readline/: history.h  readline.h
compat/sys/: ioctl.h  mman.h  resource.h  socket.h  stat.h  time.h  un.h  wait.h
docs/: ARCHITECTURE.md  INDEXING.md  _config.yml  cmake.md  index.md  quads-proposal.md
docs/reports/: index.md  latest
docs/reports/2026-03-29_17-20-13/: diagnostics.md  normalized.json  report.md
docs/reports/2026-03-29_17-49-39/: normalized.json
docs/reports/2026-03-29_18-31-19/: diagnostics.md  normalized.json  report.md
docs/reports/2026-03-29_18-52-15/: diagnostics.md  normalized.json  report.md
docs/reports/2026-03-29_19-10-05/: diagnostics.md  report.md
docs/reports/2026-03-29_19-19-01/: diagnostics.md  report.md
docs/reports/2026-03-29_19-38-30/: diagnostics.md  report.md
man/: trealla.1
samples/: antbee.pl  attrmod.pl  blocks.pl  chess.pl  concurrent.pl  db-stress.pl  domain.pl  ea.pl  factorial.pl  fft.pl  fib.pl  fib2.pl  fib_fast.pl  fib_tabled.pl  foo.c  grammar.pl  hanoi.pl  http_server.pl  keys.pl  like.txt  linda.pl  main.pl  nfactorial.pl  nfactorial1.pl  nfactorial2.pl  npuzzle.pl  nqueens.pl  nrev.pl  nsudoku.pl  peirera.pl  puzzle.pl  qsort.pl  queens11.pl  queens4.pl  regex.pl  repl.pl  sieve.pl  sqlite3.db  sqlite3.pl  sudoku.pl  (+36 more)
src/: attributed.c  attributed.h  atts.c  atts.h  bags.c  base64.c  base64.h  bif_atts.c  bif_atts.h  bif_bboard.c  bif_contrib.c  bif_control.c  bif_csv.c  bif_database.c  bif_ffi.c  bif_format.c  bif_functions.c  bif_maps.c  bif_net.c  bif_os.c  bif_posix.c  bif_predicates.c  bif_sort.c  bif_sregex.c  bif_streams.c  bif_tasks.c  bif_threads.c  builtins.h  cdebug.h  compile.c  contrib.c  control.c  csv.c  database.c  ffi.c  findall.c  format.c  functions.c  heap.c  heap.h  (+38 more)
src/imath/: ChangeLog  README.md  imath.c  imath.h  imrat.c
src/sre/: re.c  re.h
src/utf8/: utf8.h
src/wasm/: compat.h  spin.c  spin.h  wizer.h
tests/: run.sh  run_misc.sh  run_valgrind.sh  run_valgrind_leaks.sh  test_invariant_tpl.c
tests/floating-point/: test585.expected
tests/issues/: test030.expected  test030.pl  test066.pl  test078.expected  test078.pl  test096.expected  test096.pl  test1005.expected  test1005.pl  test1009.expected  test1009.pl  test1014.expected  test1014.pl  test1015.expected  test1015.pl  test1035.expected  test1035.pl  test1061.expected  test1061.pl  test1069.expected  test1069.pl  test114.expected  test114.pl  test130.expected  test130.pl  test143.pl  test145.expected  test145.pl  test147.pl  test148.pl  test149.pl  test150.expected  test150.pl  test153.pl  test156.expected  test156.pl  test157.expected  test157.pl  test159.expected  test159.pl  (+205 more)
tests/issues-OLD/: test008.expected  test008.pl  test009.pl  test018.pl  test019.pl  test020.expected  test020.pl  test023.pl  test025.expected  test025.pl  test027.pl  test029.expected  test029.pl  test031.expected  test031.pl  test033.pl  test034.expected  test034.pl  test035.pl  test038.expected  test038.pl  test042.pl  test044.pl  test045.expected  test045.pl  test046.expected  test046.pl  test047.expected  test047.pl  test048.expected  test048.pl  test049.expected  test049.pl  test050.expected  test050.pl  test051.expected  test051.pl  test053.expected  test053.pl  test056.expected  (+72 more)
tests/misc/: quads.expected  quads.pl  sockets.pl  timeout.expected  timeout.pl
tests/slow/: test360.pl  test_sockets.expected  test_sockets.pl  test_timeout.expected  test_timeout.pl
tests/tests/: test000.expected  test000.pl  test001.pl  test002.expected  test002.pl  test003.expected  test003.pl  test004.expected  test004.pl  test005.expected  test005.pl  test007.pl  test008.pl  test009.pl  test010.expected  test010.pl  test011.pl  test012.pl  test013.pl  test014.pl  test015.pl  test016.pl  test017.pl  test018.expected  test018.pl  test019.expected  test019.pl  test020.pl  test021.pl  test022.pl  test023.expected  test023.pl  test024.expected  test024.pl  test025.expected  test025.pl  test026.expected  test026.pl  test027.expected  test027.pl  (+135 more)
tools/: create-report  gen-compat-stubs  report-summary
tools/jq/: lib.jq  normalize.jq  report-compat-stubs.jq  report-diagnostics-by-file.jq  report-overview.jq  report-top-diagnostics-short.jq  report-top-diagnostics.jq  report-top-error-files.jq  report-unique-errors.jq  summary.jq
util/: bin2c.c
(+28 files in other folders)
